--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nirvan-TAB</title>
+    <title>test00</title>
     <style>
         body {
             margin: 0;
@@ -25,21 +25,7 @@
             padding-bottom: 10px;
             z-index: 1000;
         }
-
-        .loading-container {
-            text-align: center;
-            display: none; /* Initially hide the loading container */
-        }
-
-        .loading-spinner {
-            border: 8px solid #333;
-            border-top: 8px solid #3498db;
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            animation: spin 1s linear infinite;
-            margin-bottom: 20px;
-        }
+        
 
         .parallax-container {
             height: 100vh;
@@ -337,6 +323,7 @@
             }
 
             .content-4 {
+                font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
                 font-size: 3vw;
                 top: 50%;
                 left: 50%;
@@ -601,15 +588,6 @@
             const translateXValue = -currentIndex * (cardWidth + 20); // 20px for card gap
             cardContainer.style.transform = `translateX(${translateXValue}px)`;
         }
-
-                // Wait for the entire page to load
-                window.addEventListener('load', function() {
-            // Get the loading container element
-            var loadingContainer = document.getElementById('loadingContainer');
-
-            // Hide the loading container
-            loadingContainer.style.display = 'none';
-        });
     </script>
 </body>
 
