--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             color: #ffffff;
         }
 
-        
+
 
         @media only screen and (max-width: 700px) {
 
@@ -323,7 +323,7 @@
             }
 
             .content-4 {
-                font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
                 font-size: 3vw;
                 top: 50%;
                 left: 50%;
@@ -393,10 +393,6 @@
 </head>
 
 <body>
-    <div class="loading-container" id="loadingContainer">
-        <div class="loading-spinner"></div>
-        <p>Loading...</p>
-    </div>
 
     <header>
 
@@ -588,6 +584,7 @@
             const translateXValue = -currentIndex * (cardWidth + 20); // 20px for card gap
             cardContainer.style.transform = `translateX(${translateXValue}px)`;
         }
+
     </script>
 </body>
 
