--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             position: relative;
             width: 100%;
             height: 100vh;
-            background-color: #bd947b;
+            background-color: #dbb59d;
         }
 
         .content-1 {
