--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Test</title>
+    <title>Nirvan: Talks About Books</title>
+    <link rel="icon" type="image/x-icon" href="logo.jpg">
     <style>
         body {
             margin: 0;
