--- a/index.html
+++ b/index.html
@@ -4,9 +4,298 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nirvan: Talks About Books</title>
+    <title>Main Test</title>
     <link rel="icon" type="image/x-icon" href="logo.jpg">
     <style>
+        /* CSS Document */
+
+        * {
+            padding: 0px;
+            margin: 0px;
+        }
+
+        html,
+        body {
+            background: #000;
+            width: 100%;
+            height: 100%;
+        }
+
+        #wrap {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            margin: 0 auto 0 auto;
+            overflow: hidden;
+        }
+
+        #lightings {
+            bottom: -60px;
+            position: absolute;
+            width: 100%;
+        }
+
+        section {
+            /*border-radius*/
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            border-radius: 50%;
+            height: 20px;
+            width: 100%;
+            position: relative;
+            margin: auto;
+
+        }
+
+        #one {
+            /*animation*/
+            -webkit-animation: one 5s ease-in-out infinite alternate;
+            -moz-animation: one 5s ease-in-out infinite alternate;
+            -ms-animation: one 5s ease-in-out infinite alternate;
+            -o-animation: one 5s ease-in-out infinite alternate;
+            animation: one 5s ease-in-out infinite alternate;
+        }
+
+        @-webkit-keyframes one {
+            from {
+                -webkit-box-shadow: 0 0 250px 20px #473C78;
+            }
+
+            to {
+                -webkit-box-shadow: 0 0 100px 15px #F72A3B;
+            }
+        }
+
+        @-moz-keyframes one {
+            from {
+                -moz-box-shadow: 0 0 250px 20px #473C78;
+            }
+
+            to {
+                -moz-box-shadow: 0 0 100px 15px #F72A3B;
+            }
+        }
+
+        @-o-keyframes one {
+            from {
+                -o-box-shadow: 0 0 250px 20px #473C78;
+            }
+
+            to {
+                -o-box-shadow: 0 0 100px 15px #F72A3B;
+            }
+        }
+
+        @keyframes one {
+            from {
+                box-shadow: 0 0 250px 20px #473C78;
+            }
+
+            to {
+                box-shadow: 0 0 100px 15px #F72A3B;
+            }
+        }
+
+        #two {
+            width: 90%;
+            /*animation*/
+            -webkit-animation: two 4s ease-in-out infinite alternate;
+            -moz-animation: two 4s ease-in-out infinite alternate;
+            -ms-animation: two 4s ease-in-out infinite alternate;
+            -o-animation: two 4s ease-in-out infinite alternate;
+            animation: two 4s ease-in-out infinite alternate;
+        }
+
+        @-webkit-keyframes two {
+            from {
+                -webkit-box-shadow: 0 0 250px 20px #18C499;
+            }
+
+            to {
+                -webkit-box-shadow: 0 0 100px 15px #D8F05E;
+            }
+        }
+
+        @-moz-keyframes two {
+            from {
+                -moz-box-shadow: 0 0 250px 20px #18C499;
+            }
+
+            to {
+                -moz-box-shadow: 0 0 100px 15px #D8F05E;
+            }
+        }
+
+        @-o-keyframes two {
+            from {
+                -o-box-shadow: 0 0 250px 20px #18C499;
+            }
+
+            to {
+                -o-box-shadow: 0 0 100px 15px #D8F05E;
+            }
+        }
+
+        @keyframes two {
+            from {
+                box-shadow: 0 0 250px 20px #18C499;
+            }
+
+            to {
+                box-shadow: 0 0 100px 15px #D8F05E;
+            }
+        }
+
+        #three {
+            width: 80%;
+            /*animation*/
+            -webkit-animation: three 3s ease-in-out infinite alternate;
+            -moz-animation: three 3s ease-in-out infinite alternate;
+            -ms-animation: three 3s ease-in-out infinite alternate;
+            -o-animation: three 3s ease-in-out infinite alternate;
+            animation: three 3s ease-in-out infinite alternate;
+        }
+
+        @-webkit-keyframes three {
+            from {
+                -webkit-box-shadow: 0 0 250px 20px #FFDD00;
+            }
+
+            to {
+                -webkit-box-shadow: 0 0 100px 15px #3E33FF;
+            }
+        }
+
+        @-moz-keyframes three {
+            from {
+                -moz-box-shadow: 0 0 250px 20px #FFDD00;
+            }
+
+            to {
+                -moz-box-shadow: 0 0 100px 15px #3E33FF
+            }
+        }
+
+        @-o-keyframes three {
+            from {
+                -o-box-shadow: 0 0 250px 20px #FFDD00;
+            }
+
+            to {
+                -o-box-shadow: 0 0 100px 15px #3E33FF
+            }
+        }
+
+        @keyframes three {
+            from {
+                box-shadow: 0 0 250px 20px #FFDD00;
+            }
+
+            to {
+                box-shadow: 0 0 100px 15px #3E33FF
+            }
+        }
+
+        #four {
+            width: 70%;
+            /*animation*/
+            -webkit-animation: four 2s ease-in-out infinite alternate;
+            -moz-animation: four 2s ease-in-out infinite alternate;
+            -ms-animation: four 2s ease-in-out infinite alternate;
+            -o-animation: four 2s ease-in-out infinite alternate;
+            animation: four 2s ease-in-out infinite alternate;
+        }
+
+        @-webkit-keyframes four {
+            from {
+                -webkit-box-shadow: 0 0 250px 20px #781848;
+            }
+
+            to {
+                -webkit-box-shadow: 0 0 100px 15px #F2BBE9;
+            }
+        }
+
+        @-moz-keyframes four {
+            from {
+                -moz-box-shadow: 0 0 250px 20px #781848;
+            }
+
+            to {
+                -moz-box-shadow: 0 0 100px 15px #F2BBE9;
+            }
+        }
+
+        @-o-keyframes four {
+            from {
+                -o-box-shadow: 0 0 250px 20px #781848;
+            }
+
+            to {
+                -o-box-shadow: 0 0 100px 15px #F2BBE9;
+            }
+        }
+
+        @keyframes four {
+            from {
+                shadow: 0 0 250px 20px #781848;
+            }
+
+            to {
+                shadow: 0 0 100px 15px #F2BBE9;
+            }
+        }
+
+        #five {
+            width: 60%;
+            /*animation*/
+            -webkit-animation: five 1s ease-in-out infinite alternate;
+            -moz-animation: five 1s ease-in-out infinite alternate;
+            -ms-animation: five 1s ease-in-out infinite alternate;
+            -o-animation: five 1s ease-in-out infinite alternate;
+            animation: five 1s ease-in-out infinite alternate;
+        }
+
+        @-webkit-keyframes five {
+            from {
+                -webkit-box-shadow: 0 0 250px 20px #42F2A1;
+            }
+
+            to {
+                -webkit-box-shadow: 0 0 100px 15px #F4F6AD;
+            }
+        }
+
+        @-moz-keyframes five {
+            from {
+                -moz-box-shadow: 0 0 250px 20px #42F2A1;
+            }
+
+            to {
+                -moz-box-shadow: 0 0 100px 15px #F4F6AD;
+            }
+        }
+
+        @-o-keyframes five {
+            from {
+                -o-box-shadow: 0 0 250px 20px #42F2A1;
+            }
+
+            to {
+                -o-box-shadow: 0 0 100px 15px #F4F6AD;
+            }
+        }
+
+        @keyframes five {
+            from {
+                box-shadow: 0 0 250px 20px #42F2A1;
+            }
+
+            to {
+                box-shadow: 0 0 100px 15px #F4F6AD;
+            }
+        }
+
         body {
             margin: 0;
             font-family: cursive;
@@ -91,7 +380,7 @@
             position: relative;
             width: 100%;
             height: 100vh;
-            background-color: #dbb59d;
+            background-color: #bd947b;
         }
 
         .content-1 {
@@ -258,22 +547,12 @@
         }
 
         .contact-container {
-            display: cover;
             position: center;
             font-size: 1.1em;
-            animation: fadeIn 1s ease-in-out;
             align-items: center;
             justify-content: center;
-            width: 800px;
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 0 50px rgb(255, 255, 255);
-            opacity: 100;
-            background-color: #;
-            animation: fadeIn 3s forwards;
+            padding: 200px;
             text-align: center;
-            border-radius: 10px;
-            background-color: rgba(0, 0, 0, 0.2);
         }
 
         a {
@@ -582,61 +861,71 @@
         </div>
     </div>
 
-    <div class="parallax-container">
-        <div class="section-5">
-            <div class="content-5">
 
 
-                <div class="contact-container">
-                    <h1>Contact Me</h1>
-                    <p>Email: <a
-                            href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJlDTGtKbkbsSkxQDvHctzwbbrbXVFpCjJJqTJrzGDZNsRdrJPPttsZGLhQblZvCqDHPPFL"
-                            target="_blank">rajtimsina403@gmail.com</a></p>
+    <article id="wrap">
+        <div class="contact-container">
+            <h1 style="color: #bd947b;">Contact Me</h1>
+            <br>
+            <br>
+            <br>
+            <p style="color: #bd947b;">Email: <a
+                    href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJlDTGtKbkbsSkxQDvHctzwbbrbXVFpCjJJqTJrzGDZNsRdrJPPttsZGLhQblZvCqDHPPFL"
+                    target="_blank">rajtimsina403@gmail.com</a></p>
 
 
-                    <div>
-                        <a href="https://www.instagram.com/rahz.xotwod" target="_blank">Instagram</a>
-                        <a href="https://www.github.com/rajtimsina" target="_blank">Github</a>
-                        <a href="https://www.linkedin.com/in/raj-timsina-87818729b/" target="_blank">LinkedIn</a>
-                    </div>
-                </div>
-                <footer>
-                    <p>&copy; 2024 Nirvan Timsina</p>
-                </footer>
+            <br>
+            <a href="https://www.instagram.com/rahz.xotwod" target="_blank">Instagram</a>
+            <a href="https://www.github.com/rajtimsina" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/in/raj-timsina-87818729b/" target="_blank">LinkedIn</a>
+
+        </div>
+        <article id="lightings">
+            <section id="one">
+                <section id="two">
+                    <section id="three">
+                        <section id="four">
+                            <section id="five">
+
+                            </section>
+                        </section>
+                    </section>
+                </section>
+            </section>
+        </article>
+    </article>
 
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            let parallaxSections = document.querySelectorAll('.parallax-section');
 
+            window.addEventListener('scroll', function () {
+                let scrollPosition = window.scrollY;
 
-                <script>
-                    document.addEventListener('DOMContentLoaded', function () {
-                        let parallaxSections = document.querySelectorAll('.parallax-section');
+                parallaxSections.forEach(function (section, index) {
+                    let speed = (index + 1) * 0.5;
+                    section.style.transform = 'translateY(' + scrollPosition * speed + 'px)';
+                });
+            });
+        });
 
-                        window.addEventListener('scroll', function () {
-                            let scrollPosition = window.scrollY;
+        function scrollToSection(sectionClass) {
+            let section = document.querySelector(sectionClass);
+            section.scrollIntoView({ behavior: 'smooth' });
+        }
 
-                            parallaxSections.forEach(function (section, index) {
-                                let speed = (index + 1) * 0.5;
-                                section.style.transform = 'translateY(' + scrollPosition * speed + 'px)';
-                            });
-                        });
-                    });
+        let currentIndex = 0;
 
-                    function scrollToSection(sectionClass) {
-                        let section = document.querySelector(sectionClass);
-                        section.scrollIntoView({ behavior: 'smooth' });
-                    }
+        function slideCards(direction) {
+            const cardContainer = document.querySelector('.card-container');
+            const cardWidth = document.querySelector('.card').offsetWidth;
+            currentIndex += direction;
+            const translateXValue = -currentIndex * (cardWidth + 20); // 20px for card gap
+            cardContainer.style.transform = `translateX(${translateXValue}px)`;
+        }
 
-                    let currentIndex = 0;
-
-                    function slideCards(direction) {
-                        const cardContainer = document.querySelector('.card-container');
-                        const cardWidth = document.querySelector('.card').offsetWidth;
-                        currentIndex += direction;
-                        const translateXValue = -currentIndex * (cardWidth + 20); // 20px for card gap
-                        cardContainer.style.transform = `translateX(${translateXValue}px)`;
-                    }
-
-                </script>
+    </script>
 </body>
 
 </html>
