--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         html,
         body {
-            background: #000;
+            background: #3b2a52;
             width: 100%;
             height: 100%;
         }
